<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_smoke"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lyPrin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/azul"
                android:background="@drawable/layout_principal_curvasabajo"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarse"
                    android:drawableLeft="@drawable/add_circle"
                    android:drawablePadding="-110dp"
                    android:paddingLeft="80dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_curverightsuperior"
            android:gravity="center_horizontal"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="420dp"
                android:layout_marginTop="30dp"
                app:cardElevation="3dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <TextView
                        android:id="@+id/encabezado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Datos personales"
                        android:textStyle="bold"
                        android:textColor="@color/gris_tabla"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edNom"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:background="@drawable/curves"
                        android:hint="Nombre completo"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/nom_completo"
                        android:padding="8dp"
                        android:layout_marginTop="18dp"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/edUser"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:background="@drawable/curves"
                        android:hint="Usuario"
                        android:padding="8dp"
                        android:maxLength="24"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/usuarioicon"
                        android:layout_marginTop="18dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edPass"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:background="@drawable/curves"
                        android:gravity="center"
                        android:ems="10"
                        android:hint="@string/contraseña_hint"
                        android:inputType="textPassword"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/passicon"
                        android:layout_marginTop="18dp"
                        android:padding="8dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edRPass"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:background="@drawable/curves"
                        android:gravity="center"
                        android:ems="10"
                        android:hint="@string/re_contraseña_hint"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/key"
                        android:layout_marginTop="18dp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        >

                    <Button
                        android:id="@+id/btnEdad"
                        android:layout_width="120dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:background="@drawable/button_secuntary"
                        android:text="Edad"
                        android:padding="8dp"
                        android:textColor="@color/azul"
                        android:drawableLeft="@drawable/abajo"
                        android:textSize="16sp" />

                        <Button
                            android:id="@+id/btnGenero"
                            android:layout_width="120dp"
                            android:layout_height="44dp"
                            android:gravity="center"
                            android:layout_marginStart="20dp"
                            android:background="@drawable/button_secuntary"
                            android:text="Género"
                            android:padding="8dp"
                            android:textColor="@color/azul"
                            android:drawableRight="@drawable/abajo"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Button
                            android:id="@+id/btnReg"
                            android:layout_width="260dp"
                            android:layout_height="44dp"
                            android:background="@drawable/button_rouned"
                            android:backgroundTint="@color/azul"
                            android:text="Registrarse"
                            android:layout_marginTop="18dp"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4A4A4A"
                    android:paddingStart="6dp"
                    android:textSize="16sp"
                    android:text="@string/tiene_cuenta">
                </TextView>

                <TextView
                    android:id="@+id/iniSes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rose"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/iniciar_sesion">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>