<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SocialActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purpura"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_smoke"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lyPrin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/purpura"
                android:background="@drawable/layout_principal_curvasabajo"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrarse"
                    android:drawableLeft="@drawable/add_circle"
                    android:drawablePadding="-110dp"
                    android:paddingLeft="80dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_curverightsuperior"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:text="4"
                android:textColor="#fff"
                android:gravity="center"
                android:textSize="18sp"
                android:backgroundTint="@color/purpura"
                android:background="@drawable/btn_circulo">
            </TextView>
            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="380dp"
                android:layout_marginTop="10dp"
                app:cardElevation="3dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <TextView
                        android:id="@+id/encabezado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ambiente social"
                        android:textStyle="bold"
                        android:textColor="@color/gris_tabla"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edInstragram"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:background="@drawable/curves"
                        android:hint="Instagram"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/ig1"
                        android:padding="8dp"
                        android:layout_marginTop="18dp"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/edFacebook"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:background="@drawable/curves"
                        android:hint="Facebook"
                        android:padding="8dp"
                        android:paddingEnd="30dp"
                        android:drawableLeft="@drawable/fb1"
                        android:layout_marginTop="18dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edTwitter"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:background="@drawable/curves"
                        android:gravity="center"
                        android:ems="10"
                        android:hint="Twitter"
                        android:paddingEnd="30dp"
                        android:inputType="text"
                        android:drawableLeft="@drawable/tt1"
                        android:layout_marginTop="18dp"
                        android:padding="8dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edTelefono"
                        android:layout_width="260dp"
                        android:layout_height="44dp"
                        android:background="@drawable/curves"
                        android:gravity="center"
                        android:ems="10"
                        android:hint="Numero telefonico"
                        android:padding="8dp"
                        android:paddingEnd="30dp"
                        android:inputType="number"
                        android:drawableLeft="@drawable/telefono"
                        android:layout_marginTop="18dp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        >

                        <Button
                            android:id="@+id/btnAnte"
                            android:layout_width="120dp"
                            android:layout_height="44dp"
                            android:background="@drawable/button_rouned"
                            android:backgroundTint="@color/naranja"
                            android:text="Anterior"
                            android:paddingEnd="10dp"
                            android:drawableLeft="@drawable/anterior"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btnFin"
                            android:layout_width="120dp"
                            android:layout_height="44dp"
                            android:background="@drawable/button_rouned"
                            android:backgroundTint="@color/purpura"
                            android:text="Finalizar"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:layout_marginStart="20dp"
                            android:drawableRight="@drawable/finalizar"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4A4A4A"
                    android:paddingStart="6dp"
                    android:textSize="16sp"
                    android:text="@string/tiene_cuenta">
                </TextView>

                <TextView
                    android:id="@+id/iniSes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rose"
                    android:paddingStart="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/iniciar_sesion">
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>